--- a/.github/workflows/create-rename-branch.yml
+++ b/.github/workflows/create-rename-branch.yml
@@ -6,15 +6,23 @@ name: Create and rename branch for issues
 # events but only for the main branch
 on:
   issues:
-    types: [assigned]
+    types: [assigned, edited]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   create-branch:
     runs-on: ubuntu-latest
+    name: Creating Branch
     steps:
       - uses: peterjgrainger/action-create-branch@v2.0.1
+        if: (github.event.issues == 'assigned')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with: 
           branch: ${{ github.event.issue.title }}
+  edit-branch:
+    runs-on: ubuntu-latest
+    name: Renaming Branch
+    steps:
+      - run: git branch -m new_branch
+        if: (github.event.issues == 'edited')
