--- a/.github/workflows/create-rename-branch.yml
+++ b/.github/workflows/create-rename-branch.yml
@@ -24,9 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Renaming Branch
     steps:
-      - if: (github.event.issues == 'edited')
       - run: |
           git branch -m new_branch
           git push origin -u new_branch
           git push origin --delete test
+    if: (github.event.issues == 'edited')
        
